--- a/css/default.css
+++ b/css/default.css
@@ -1,3 +1,4 @@
+/*
 body {
     color: black;
     font-size: 16px;
@@ -11,6 +12,7 @@ header {
     padding: 12px 0px 12px 0px;
 }
 
+*/
 nav {
     text-align: right;
 }
@@ -23,6 +25,7 @@ nav a {
     text-decoration: none;
     text-transform: uppercase;
 }
+
 
 footer {
     border-top: solid 2px black;
