restructured working directory

--- a/src_site/templates/default.html
+++ b/src_site/templates/default.html
@@ -40,7 +40,7 @@
 		
 		<div class="callout large primary">
             <div class="row column text-center">
-				<h1>Hakyll with Foundation</h1>
+				<h1>Hakyll with Foundation and More</h1>
                 <h2 class="subheader">Basic One Column Blog Template</h2>
             </div>
         </div>
