--- a/src_site/templates/default.html
+++ b/src_site/templates/default.html
@@ -7,6 +7,7 @@
         <title>My Hakyll Blog - $title$</title>
         <link rel="stylesheet" href="/css/app.css" />
         <link rel="stylesheet" href="/css/default.css" />
+        <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css">
     </head>
     <body>
 	
@@ -66,9 +67,11 @@
         </footer>		   		
 
         <!-- JavaScript -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.4.3/js/foundation.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/foundation/6.4.3/js/foundation.js"></script>
         <script>
+            hljs.initHighlightingOnLoad();
             $$(document).foundation();
         </script>
     </body>
