--- a/Foundation/scss/_settings.scss
+++ b/Foundation/scss/_settings.scss
@@ -61,6 +61,7 @@
 //  56. Xy Grid
 
 @import 'util/util';
+@import 'solarized';  // import solarized colors
 
 // 1. Global
 // ---------
@@ -80,8 +81,8 @@ $medium-gray: #cacaca;
 $dark-gray: #8a8a8a;
 $black: #0a0a0a;
 $white: #fefefe;
-$body-background: $white;
-$body-font-color: $black;
+$body-background: $solarized-base3; //$white;
+$body-font-color: $solarized-base03; //$black;
 $body-font-family: 'Helvetica Neue', Helvetica, Roboto, Arial, sans-serif;
 $body-antialiased: true;
 $global-margin: 1rem;
