--- a/src_site/css/default.css
+++ b/src_site/css/default.css
@@ -64,3 +64,217 @@ article .header {
     font-weight: bold;
     text-decoration: none;
 }
+
+ /*
+ /
+ /
+ /
+ /
+ /  hover animation
+ /
+ /
+ / http://www.cssscript.com/demo/transparent-image-hover-overlay-with-pure-css-css3/ 
+ /
+ /
+ /
+ /
+ /
+*/
+
+.media {
+  display: inline-block;
+  position: relative;
+  vertical-align: top;
+}
+
+.media__image { display: block; }
+
+.media__body {
+  background: rgba(238,232,213,.7);//rgba(41, 128, 185, 0.7);
+  bottom: 0;
+  color: #002b36;
+  font-size: 1em;
+  left: 0;
+  opacity: 0;
+  overflow: hidden;
+  padding: 3.75em 3em;
+  position: absolute;
+  text-align: center;
+  top: 0;
+  right: 0;
+  -webkit-transition: 0.6s;
+  transition: 0.6s;
+}
+
+.media__body:hover { opacity: 1; }
+
+.media:hover .media__image { fill: #2aa198; }
+
+.media__body:after,
+.media__body:before {
+  border: 1px solid rgba(255, 255, 255, 0.7);
+  bottom: 1em;
+  content: '';
+  left: 1em;
+  opacity: 0;
+  position: absolute;
+  right: 1em;
+  top: 1em;
+  -webkit-transform: scale(1.5);
+  -ms-transform: scale(1.5);
+  transform: scale(1.5);
+  -webkit-transition: 0.6s 0.2s;
+  transition: 0.6s 0.2s;
+}
+
+.media__body:before {
+  border-bottom: none;
+  border-top: none;
+  left: 2em;
+  right: 2em;
+}
+
+.media__body:after {
+  border-left: none;
+  border-right: none;
+  bottom: 2em;
+  top: 2em;
+}
+
+.media__body:hover:after,
+.media__body:hover:before {
+  -webkit-transform: scale(1);
+  -ms-transform: scale(1);
+  transform: scale(1);
+  opacity: 1;
+}
+
+.media__body h2 { margin-top: 0; }
+
+.media__body p { margin-bottom: 1.5em; }
+
+.media:nth-child(2) .media__body { background: rgba(146, 41, 185, 0.7); }
+
+.media:nth-child(3) .media__body { background: rgba(185, 41, 128, 0.7); }
+
+.media:nth-child(4) .media__body { background: rgba(185, 50, 41, 0.7); }
+
+.media:nth-child(5) .media__body { background: rgba(185, 146, 41, 0.7); }
+
+.media:nth-child(6) .media__body { background: rgba(128, 185, 41, 0.7); }
+
+
+ /*
+ /
+ /
+ /
+ /
+ / captcha-like checkbox
+ /
+ /
+ / https://codepen.io/rynjwssl/pen/XKXYMd
+ /
+ /
+ /
+ /
+ /
+*/
+
+.captchaContainer {
+  background-color: #f9f9f9;
+  border: 1px solid #d4d4d4;
+  padding: 15px 40px 15px 30px;
+}
+.captchaWrapper {
+  line-height: 0;
+}
+.captchaWrapper, .captchaContainer {
+  display: inline-block;
+  float: left;
+}
+#hiddenCaptcha {
+  display: none;
+}
+#hiddenCaptcha:checked + .captchaLabel:after {
+  max-width: 25px;
+  opacity: 1;
+  overflow: inherit;
+}
+.captchaLabel {
+  font-weight: 700;
+  color: #4a4a4a;
+  padding: 2px 0 0 40px;
+  position: relative;
+  display: block;
+  float: left;
+}
+.captchaLabel:after {
+  font-family: FontAwesome;
+  position: absolute;
+  content: '\f00c';
+  max-width: 0;
+  overflow: hidden;
+  opacity: 0.5;
+  font-size: 2rem;
+  top: -1rem;
+  left: -2.2rem;
+  color: #039F53;
+  -webkit-transition: all 0.7s;
+  -moz-transition: all 0.7s;
+  -ms-transition: all 0.7s;
+  transition: all 0.7s;
+}
+.captchaBox {
+  width: 24px;
+  height: 24px;
+  padding: 0;
+  outline: none;
+  border: 2px solid #b9b9b9;
+  border-radius: 2px;
+}
+.boxHover {
+  background-color: #fff;
+}
+.boxHover:hover {
+  cursor: pointer;
+  border: 2px solid #1E88E5;
+}
+.scaleDown {
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  -ms-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+  transform: scale(0.2,0.2);
+}
+.circle {
+  border-top: 2px solid #1E88E5;
+  border-right-color: transparent;
+  border-bottom: 2px solid #1E88E5;
+  border-left-color: transparent;
+  border-radius: 12px;
+  background-color: #fafafa;
+}
+.scaleUp {
+  -webkit-transition: all 0.6s ease;
+  -moz-transition: all 0.6s ease;
+  -ms-transition: all 0.6s ease;
+  transition: all .6s ease;
+  transform: scale(1,1);
+}
+.rotation {
+  -webkit-transition: all 2s ease-out;
+  -moz-transition: all 2s ease-out;
+  -ms-transition: all 2s ease-out;
+  transition: all 2s ease-out;
+  transform: rotate(1080deg);
+}
+.fadeOut {
+  -webkit-transition: all 0.6s ease;
+  -moz-transition: all 0.6s ease;
+  -ms-transition: all 0.6s ease;
+  transition: all .6s ease;
+  border-color: transparent;
+}
+.captchaError {
+  box-shadow: 0 0 1px 1px #E53935;
+}
