--- a/src_site/templates/default.html
+++ b/src_site/templates/default.html
@@ -71,6 +71,7 @@
         <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/foundation/6.4.3/js/foundation.js"></script>
+        <script src="/js/app.js"></script>
         <script>
             hljs.initHighlightingOnLoad();
             $$(document).foundation();
