--- a/src_site/templates/default.html
+++ b/src_site/templates/default.html
@@ -76,6 +76,9 @@
             hljs.initHighlightingOnLoad();
             $$(document).foundation();
         </script>
+        <script src="//static.getclicky.com/js" type="text/javascript"></script>
+        <script type="text/javascript">try{ clicky.init(101019144); }catch(e){}</script>
+        <noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/101019144ns.gif" /></p></noscript>
     </body>
 </html>
 		
