--- a/src_site/templates/textfile.html
+++ b/src_site/templates/textfile.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>My Hakyll Blog - $title$</title>
+        <title>Yun Hao</title>
         <link rel="stylesheet" href="/css/app.css" />
         <link rel="stylesheet" href="/css/default.css" />
         <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css">
