--- a/src_site/templates/default.html
+++ b/src_site/templates/default.html
@@ -89,7 +89,7 @@
         <script>
             hljs.initHighlightingOnLoad();
             $$(document).foundation();
-        </script>l
+        </script>
     </body>
 </html>
 		
