--- a/src_site/css/default.css
+++ b/src_site/css/default.css
@@ -1,10 +1,8 @@
-footer {
+/*footer {
     background-color: #e6e6e6;
 	padding: 20px 0px;
 }
 
-
-/*
 body {
     color: black;
     font-size: 16px;
@@ -18,7 +16,7 @@ header {
     padding: 12px 0px 12px 0px;
 }
 
-*/
+
 nav {
     text-align: right;
 }
@@ -32,7 +30,7 @@ nav a {
     text-transform: uppercase;
 }
 
-/*
+
 footer {
     /*border-top: solid 2px black;
     color: #555;
@@ -49,7 +47,7 @@ h1 {
 h2 {
     font-size: 20px;
 }
-*/
+
 
 article .header {
     color: #555;
@@ -64,6 +62,7 @@ article .header {
     font-weight: bold;
     text-decoration: none;
 }
+*/
 
 
 
