--- a/Foundation/scss/snippet.scss
+++ b/Foundation/scss/snippet.scss
@@ -33,3 +33,7 @@ footer {
 .footer-copyright {
     background-color: rgba($solarized-base1,0.1);
 }
+
+footer {
+    font-size: $small-font-size;
+}
