--- a/src_site/templates/textfile.html
+++ b/src_site/templates/textfile.html
@@ -45,6 +45,9 @@
 	
     <div class="grid-container" style="min-height:100vh">
         <div class="grid-y grid-padding-y">
+		    <div class="cell">
+		        <a href="/">[Back to Stupidity] ↵</a>
+			</div>
             <div class="cell">
                 $body$
             </div>
