--- a/src_site/templates/footer.html
+++ b/src_site/templates/footer.html
@@ -20,9 +20,9 @@
                 <h5>Links</h5>
                 <ul>
                     <li><a href="//push2kindle-154021.appspot.com/">KindleEar</a></li>
-                    <li><a href="//haoyun.000webhostapp.com/piwik/index.php">Piwik</a></li>
-                    <li><a href="/s/notes.html">Notes</a></li>
-                    <li><a href="/s/comment.html">Leave a Comment</a>
+                    <!--<li><a href="//haoyun.000webhostapp.com/piwik/index.php">Piwik</a></li>-->
+                    <li><a href="/s/notes/">Notes</a></li>
+                    <li><a href="/comment/">Leave a Comment</a>
                 </ul>
             </div>
         </div>
