--- a/src_site/templates/textfile.html
+++ b/src_site/templates/textfile.html
@@ -25,7 +25,7 @@
             font-size: 1rem;
         }
         </style>
-<!-- Piwik -->
+<!-- Piwik 
 <script type="text/javascript">
   var _paq = _paq || [];
   /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
