--- a/src_site/templates/default.html
+++ b/src_site/templates/default.html
@@ -15,7 +15,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>My Hakyll Blog - $title$</title>
         <link rel="stylesheet" href="/css/app.css" />
-        <link rel="stylesheet" href="/css/default.css" />
         <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css">
 <!-- Piwik 
 <script type="text/javascript">
@@ -62,14 +61,14 @@
 		    </div>
         </div>
 
-		<!-- Hero section -->
+		<!-- Hero section 
 		
 		<div class="callout large primary">
             <div class="row column text-center">
 				<h1>Hakyll with Foundation and More</h1>
                 <h2 class="subheader">Basic One Column Blog Template</h2>
             </div>
-        </div>
+        </div>-->
 
 		<!-- main section -->
 				
