--- a/src_site/templates/footer.html
+++ b/src_site/templates/footer.html
@@ -12,7 +12,7 @@
                 <a href="//daringfireball.net/projects/markdown/">Markdown</a>.
                 Stylesheets are built with
                 <a href="//foundation.zurb.com/">Zurb Foundation</a>
-                with <a href="//ethanschoonover.com/solarized">Solarized</a>
+                with <a href="http://ethanschoonover.com/solarized">Solarized</a>
                 color-scheme. The site, including source codes, is hosted on
                 <a href="//github.com/haoyun/haoyun.github.io/">Github</a>.</p>
             </div>
