--- a/Foundation/scss/fake-recaptcha.scss
+++ b/Foundation/scss/fake-recaptcha.scss
@@ -7,9 +7,8 @@
     -moz-box-shadow: 0px 0px 4px 1px rgba(0, 0, 0, 0.08);
     height: 74px;
     width: 300px;
-    background: #f9f9f9;
-    color: #000;
-    border: 1px solid #d3d3d3;
+    background: $solarized-base3;//#f9f9f9;
+    border: 1px solid $solarized-base2;//#d3d3d3;
 }
 
 .c-center-container {
@@ -19,6 +18,9 @@
 
 .c-center {
     flex-grow:1;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
 }
 
 .c-left {
@@ -41,7 +43,7 @@
 }
 
 .c-clogo-text {
-    color: #9b9b9b;
+    color: $solarized-base00;
     cursor: default;
     font-size: .625rem;
     font-weight: 400;
@@ -49,14 +51,14 @@
 }
 
 .c-pt {
-    color: #9b9b9b;
+    color: $solarized-base00;
     font-size: 8px;
     font-weight: 400;
 }
 
 .c-pt a:link,
 .c-pt a:visited {
-    color: #9b9b9b;
+    color: $solarized-base00;
     text-decoration: none;
 }
 .c-pt a:hover {
@@ -76,8 +78,8 @@
     -webkit-border-radius: 2px;
     -moz-border-radius: 2px;
     border-radius: 2px;
-    background-color: #fff;
-    border: 2px solid #c1c1c1;
+    background-color: $solarized-base3;//#fff;
+    border: 2px solid $solarized-base2;//#c1c1c1;
     font-size: 1px;
     height: 28px;
     width: 28px;
