--- a/src_site/templates/default.html
+++ b/src_site/templates/default.html
@@ -47,7 +47,7 @@
                         <div class="menu ">
 						    <!--<div class="menu-text">Natural Stupidity</div>-->
 							<li class="menu-text" style="padding-top:0px;padding-bottom:0px;">
-                                <a href="/" style="padding:0;"><img alt="facepalm" width="36" height="36" src="/images/palmface.png"/></a></li>
+                                <a href="/" style="padding:0;"><img alt="facepalm" width="36" height="36" src="/images/facepalm.png"/></a></li>
 					    </div>
 		            </div>
 		            <div class="top-bar-right">
