--- a/Foundation/scss/snippet.scss
+++ b/Foundation/scss/snippet.scss
@@ -9,7 +9,8 @@
 .website-title {
     font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
     font-weight: 900;
-    text-decoration-line: underline;
+    text-decoration: underline;
+	border-bottom: 1px solid;
 }
 
 .website-subtitle {
