--- a/Foundation/scss/app.scss
+++ b/Foundation/scss/app.scss
@@ -9,7 +9,7 @@
 // @include foundation-flex-grid;
 @include foundation-xy-grid-classes;
 @include foundation-typography;
-//@include foundation-button;
+@include foundation-button;
 @include foundation-forms;
 // @include foundation-range-input;
 //@include foundation-accordion;
@@ -19,7 +19,7 @@
 //@include foundation-button-group;
 @include foundation-callout;
 //@include foundation-card;
-//@include foundation-close-button;
+@include foundation-close-button;
 @include foundation-menu;
 @include foundation-menu-icon;
 //@include foundation-drilldown-menu;
@@ -37,7 +37,7 @@
 // @include foundation-meter-element;
 //@include foundation-slider;
 //@include foundation-sticky;
-//@include foundation-reveal;
+@include foundation-reveal;
 //@include foundation-switch;
 //@include foundation-table;
 //@include foundation-tabs;
