--- a/src_site/templates/textfile.html
+++ b/src_site/templates/textfile.html
@@ -10,6 +10,7 @@
 
   gtag('config', 'UA-61795702-1');
 </script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/pdfobject/2.0.201604172/pdfobject.js"></script>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
