--- a/src_site/templates/textfile.html
+++ b/src_site/templates/textfile.html
@@ -19,10 +19,14 @@
         <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css">
         <style>
         body {
-            font-family: monospace;
+            font-family: monospace, monospace;
         }
         h1, h2, h3, h4 {
-            font-size: 1rem;
+            font-size:  1.125rem;
+            font-weight: bolder;
+        }
+        h3 {
+            font-weight: lighter;
         }
         </style>
 <!-- Piwik 
