--- a/src_site/templates/footer.html
+++ b/src_site/templates/footer.html
@@ -23,6 +23,7 @@
                     <!--<li><a href="//haoyun.000webhostapp.com/piwik/index.php">Piwik</a></li>-->
                     <li><a href="/s/notes/">Notes</a></li>
                     <li><a href="/s/links/">Links</a></li>
+                    <li><a href="/s/tools/">Tools</a></li>
                     <li><a href="/comment/">Leave a Comment</a>
                 </ul>
             </div>
