--- a/src_site/templates/footer.html
+++ b/src_site/templates/footer.html
@@ -14,14 +14,14 @@
                 <a href="//foundation.zurb.com/">Zurb Foundation</a>
                 with <a href="http://ethanschoonover.com/solarized">Solarized</a>
                 color-scheme. The site, including source codes, is hosted on
-                <a href="//github.com/haoyun/haoyun.github.io/">Github</a>.</p>
+                <a href="//pages.github.com">Github Pages</a>.</p>
             </div>
             <div class="cell medium-4">
                 <h5>Links</h5>
                 <ul>
                     <li><a href="//push2kindle-154021.appspot.com/">KindleEar</a></li>
                     <!--<li><a href="//haoyun.000webhostapp.com/piwik/index.php">Piwik</a></li>-->
-                    <li><a href="/s/notes/">Notes</a></li>
+                    <!--<li><a href="/s/notes/">Notes</a></li>-->
                     <li><a href="/s/links/">Links</a></li>
                     <li><a href="/s/tools/">Tools</a></li>
                     <li><a href="/comment/">Leave a Comment</a>
@@ -32,7 +32,7 @@
     </div>
     <div class="footer-copyright">
         <div class="grid-container">
-            <div class="grid-x grid-padding-x">
+            <div class="grid-x grid-padding-x grid-margin-y">
                 <div class="cell">
                     © 2017 Yun Hao &lt;<a href="mailto:haoyun_public@163.com">haoyun_public@163.com</a>&gt;
                 </div>
