--- a/Foundation/scss/_settings.scss
+++ b/Foundation/scss/_settings.scss
@@ -83,7 +83,7 @@ $black: #0a0a0a;
 $white: #fefefe;
 $body-background: $solarized-base3; //$white;
 $body-font-color: $solarized-base02; //$black;
-$body-font-family: 'Helvetica Neue', Helvetica, Roboto, Arial, sans-serif;
+$body-font-family: 'Helvetica Neue', Helvetica, Roboto, Arial, 'Noto Sans SC Lighter', sans-serif;//'Helvetica Neue', Helvetica, Roboto, Arial, sans-serif;
 $body-antialiased: true;
 $global-margin: 1rem;
 $global-padding: 1rem;
