--- a/src_site/templates/archive.html
+++ b/src_site/templates/archive.html
@@ -1,2 +1,10 @@
-Here you can find all my previous posts:
-$partial("templates/post-list.html")$
+
+<article class="archive">
+    <section class="header archive-header">
+        <h1>$title$</h1>
+    </section>
+    <section class="main archieve-main">
+        Here you can find all my previous posts:
+        $partial("templates/post-list.html")$
+    </section>
+</article>
