--- a/Foundation/scss/_settings.scss
+++ b/Foundation/scss/_settings.scss
@@ -83,7 +83,7 @@ $black: #0a0a0a;
 $white: #fefefe;
 $body-background: $solarized-base3; //$white;
 $body-font-color: $solarized-base02; //$black;
-$body-font-family: 'Helvetica Neue', Helvetica, Roboto, Arial, 'Noto Sans SC Lighter', sans-serif;//'Helvetica Neue', Helvetica, Roboto, Arial, sans-serif;
+$body-font-family: 'Helvetica Neue', Helvetica, Roboto, Arial, 'Noto Sans SC', sans-serif;//'Helvetica Neue', Helvetica, Roboto, Arial, sans-serif;
 $body-antialiased: true;
 $global-margin: 1rem;
 $global-padding: 1rem;
@@ -161,11 +161,11 @@ $header-small-font-color: $medium-gray;
 $paragraph-lineheight: 1.6;
 $paragraph-margin-bottom: 1rem;
 $paragraph-text-rendering: optimizeLegibility;
-$code-color: $black;
+$code-color: $body-font-color; //$black;
 $code-font-family: $font-family-monospace;
 $code-font-weight: $global-weight-normal;
-$code-background: $light-gray;
-$code-border: 1px solid $medium-gray;
+$code-background: $solarized-base2; //$light-gray;
+$code-border: none; //1px solid $medium-gray;
 $code-padding: rem-calc(2 5 1);
 $anchor-color: $primary-color;
 $anchor-color-hover: scale-color($anchor-color, $lightness: -14%);
