--- a/src_site/templates/archive.html
+++ b/src_site/templates/archive.html
@@ -1,10 +1,15 @@
-
 <article class="archive">
-    <section class="header archive-header">
-        <h1>$title$</h1>
-    </section>
-    <section class="main archieve-main">
-        Here you can find all my previous posts:
-        $partial("templates/post-list.html")$
-    </section>
+<div class="grid-y grid-padding-y">
+<div class="cell">
+<section class="header archive-header">
+<h1>$title$</h1>
+</section>
+</div>
+<div class="cell">
+<section class="main archieve-main">
+Here you can find all my previous posts:
+$partial("templates/post-list.html")$
+</section>
+</div>
+</div>
 </article>
