--- a/src_site/templates/post-container.html
+++ b/src_site/templates/post-container.html
@@ -1,8 +1,14 @@
 <article>
-    <section class="header">
-        <h1>$title$</h1>
-    </section>
-    <section class="main">
-        $body$
-    </section>
+<div class="grid-y grid-padding-y">
+<div class="cell">
+<section class="header">
+<h1>$title$</h1>
+</section>
+</div>
+<div class="cell">
+<section class="main">
+$body$
+</section>
+</div>
+</div>
 </article>
