--- a/Foundation/scss/snippet.scss
+++ b/Foundation/scss/snippet.scss
@@ -1,54 +1,5 @@
 @import url(//fonts.googleapis.com/earlyaccess/notosanssc.css);
 
-@font-face {
-  font-family: 'Noto Sans SC Lighter';
-  font-style: normal;
-  font-weight: 100;
-  src: url(//fonts.gstatic.com/ea/notosanssc/v1/NotoSansSC-Thin.woff2) format('woff2'),
-       url(//fonts.gstatic.com/ea/notosanssc/v1/NotoSansSC-Thin.woff) format('woff'),
-       url(//fonts.gstatic.com/ea/notosanssc/v1/NotoSansSC-Thin.otf) format('opentype');
-}
-@font-face {
-  font-family: 'Noto Sans SC Lighter';
-  font-style: normal;
-  font-weight: 300;
-  src: url(//fonts.gstatic.com/ea/notosanssc/v1/NotoSansSC-Thin.woff2) format('woff2'),
-       url(//fonts.gstatic.com/ea/notosanssc/v1/NotoSansSC-Thin.woff) format('woff'),
-       url(//fonts.gstatic.com/ea/notosanssc/v1/NotoSansSC-Thin.otf) format('opentype');
-}
-@font-face {
-  font-family: 'Noto Sans SC Lighter';
-  font-style: normal;
-  font-weight: 400;
-  src: url(//fonts.gstatic.com/ea/notosanssc/v1/NotoSansSC-Light.woff2) format('woff2'),
-       url(//fonts.gstatic.com/ea/notosanssc/v1/NotoSansSC-Light.woff) format('woff'),
-       url(//fonts.gstatic.com/ea/notosanssc/v1/NotoSansSC-Light.otf) format('opentype');
-}
-@font-face {
-   font-family: 'Noto Sans SC Lighter';
-   font-style: normal;
-   font-weight: 500;
-   src: url(//fonts.gstatic.com/ea/notosanssc/v1/NotoSansSC-Regular.woff2) format('woff2'),
-        url(//fonts.gstatic.com/ea/notosanssc/v1/NotoSansSC-Regular.woff) format('woff'),
-        url(//fonts.gstatic.com/ea/notosanssc/v1/NotoSansSC-Regular.otf) format('opentype');
- }
-@font-face {
-   font-family: 'Noto Sans SC Lighter';
-   font-style: normal;
-   font-weight: 700;
-   src: url(//fonts.gstatic.com/ea/notosanssc/v1/NotoSansSC-Medium.woff2) format('woff2'),
-        url(//fonts.gstatic.com/ea/notosanssc/v1/NotoSansSC-Medium.woff) format('woff'),
-        url(//fonts.gstatic.com/ea/notosanssc/v1/NotoSansSC-Medium.otf) format('opentype');
- }
-@font-face {
-   font-family: 'Noto Sans SC Lighter';
-   font-style: normal;
-   font-weight: 900;
-   src: url(//fonts.gstatic.com/ea/notosanssc/v1/NotoSansSC-Bold.woff2) format('woff2'),
-        url(//fonts.gstatic.com/ea/notosanssc/v1/NotoSansSC-Bold.woff) format('woff'),
-        url(//fonts.gstatic.com/ea/notosanssc/v1/NotoSansSC-Bold.otf) format('opentype');
- }
-
 // 
 // For Index.html only
 // 
@@ -114,14 +65,14 @@ footer {
 //
 
 article .header {
-    color: #555;
-    font-size: 14px;
+    color: $solarized-base01;
+    font-size: $small-font-size;
 //    font-style: italic;
 }
 
-article .main {
-    text-align: justify;
-}
+// article .main {
+//     text-align: justify;
+// }
 
 
 //
@@ -129,10 +80,6 @@ article .main {
 //
 //
 
-.top-bar .menu {
-    color: $solarized-blue;
-}
-
 .top-bar .menu a {
-    color: $solarized-blue;
+    color: $solarized-base2;
 }
