--- a/src_site/templates/default.html
+++ b/src_site/templates/default.html
@@ -15,7 +15,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>My Hakyll Blog - $title$</title>
         <link rel="stylesheet" href="/css/app.css" />
-        <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css">
+        <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/solarized-dark.min.css">
+        <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js" integrity="sha384-SlE991lGASHoBfWbelyBPLsUlwY1GwNDJo3jSJO04KZ33K2bwfV9YBauFfnzvynJ" crossorigin="anonymous"></script>
 <!-- Piwik
 <script type="text/javascript">
   var _paq = _paq || [];
@@ -44,11 +45,14 @@
 		    <div class="grid-container" style="flex-grow:1;">
 		        <div class="grid-x">
 		            <div class="top-bar-left">
-                        <div class="menu ">
-						    <!--<div class="menu-text">Natural Stupidity</div>-->
+						    <!--<div class="menu-text">Natural Stupidity</div>
 							<li class="menu-text" style="padding-top:0px;padding-bottom:0px;">
                                 <a href="/" style="padding:0;"><img alt="facepalm" width="36" height="36" src="/images/facepalm.png"/></a></li>
-					    </div>
+                                -->
+                                <ul class="menu">
+                            <li class=>
+                                <a href="/">Natural Stupidity</a>
+                            </li></ul>
 		            </div>
 		            <div class="top-bar-right">
                         <ul class="menu" data-dropdown-menu>
