--- a/src_site/templates/default.html
+++ b/src_site/templates/default.html
@@ -13,8 +13,8 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>My Hakyll Blog - $title$</title>
-        <link rel="stylesheet" href="/css/app.css" />
+        <title>$title$ - Natural Stupidity</title>
+        <link rel="stylesheet" href="/css/blog_app.css" />
         <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/solarized-dark.min.css">
         <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js" integrity="sha384-SlE991lGASHoBfWbelyBPLsUlwY1GwNDJo3jSJO04KZ33K2bwfV9YBauFfnzvynJ" crossorigin="anonymous"></script>
 <!-- Piwik
@@ -77,13 +77,9 @@
 
 		<!-- main section -->
 
-        <div class="grid-container" style="min-height:100vh">
-		    <div class="grid-x">
-                <div class="cell">
-                        $body$
-                </div>
-            </div>
-	    </div><!--grid-container-->
+
+        $body$
+
 
 
 		<!-- Footer -->
