--- a/src_site/templates/post-title_info-body-teaser.html
+++ b/src_site/templates/post-title_info-body-teaser.html
@@ -1,10 +1,11 @@
-<article  class="post-preview">
-    <section class="header post-preview-header">
+<section class="cell">
+    <div class="header">
         <h4><a href="$url$">$title$</a></h4>
         <p><i class="far fa-calendar-alt"></i>&nbsp;$date$&nbsp;
         $if(author)$ <i class="far fa-edit"></i>&nbsp;$author$ $endif$</p>
-    </section>
-    <section class="main post-preview-main">
+    </div>
+    <div>
         $if(teaser)$ $teaser$ <a href="$url$">Read more &hellip;</a> $else$ $body$ $endif$
-    </section>
-</article>
+    </div>
+</section>
+
