--- a/src_site/templates/post-title_info-body.html
+++ b/src_site/templates/post-title_info-body.html
@@ -1,4 +1,4 @@
-<section class="cell">
+<section class="cell post">
     <div class="header">
         <h1>$title$</h1>
         <p><i class="far fa-calendar-alt"></i>&nbsp;$date$&nbsp;
