--- a/src_site/templates/footer.html
+++ b/src_site/templates/footer.html
@@ -1,3 +1,5 @@
+<a href="javascript:void(0);" id="rocketmeluncur" class="showrocket" ><i></i></a>
+
 <footer>
     <div class="grid-container">
         <div class="grid-x grid-padding-x grid-padding-y">
