--- a/Foundation/scss/_blog_snippet.scss
+++ b/Foundation/scss/_blog_snippet.scss
@@ -26,11 +26,11 @@ section .header {
 //
 
 .top-bar .menu a {
-//    color: $solarized-base2;
+    color: $solarized-base3;
 }
 
 .top-bar {
-    background-color: rgba($solarized-base03, 1)
+    background-color: rgba($solarized-base02, 1)
 }
 
 
