--- a/src_site/templates/finalize.html
+++ b/src_site/templates/finalize.html
@@ -17,3 +17,6 @@
     hljs.initHighlightingOnLoad();
     $$(document).foundation();
 </script>
+$if(livejs)$
+<script src="/js/live.js"></script>
+$endif$
