--- a/src_site/templates/post-title_info-body.html
+++ b/src_site/templates/post-title_info-body.html
@@ -1,10 +1,10 @@
-<section class="cell post">
+<section class="cell">
     <div class="header">
         <h1>$title$</h1>
         <p>
-            <i class="far fa-calendar-alt"></i>&nbsp;$date$&nbsp;
+            <i class="far fa-calendar"></i>&nbsp;$date$&nbsp;
             $if(author)$
-            <i class="far fa-edit"></i>&nbsp;$author$&nbsp;$endif$
+            <i class="far fa-user"></i>&nbsp;$endif$
             $if(git-commits)$
             <i class="fas fa-history"></i>&nbsp;<a href="$git-commits$">History</a>&nbsp;
             $endif$
