--- a/src_site/templates/post.html
+++ b/src_site/templates/post.html
@@ -1,6 +1,6 @@
 <article>
     <div class="grid-container" style="min-height:100vh" id="main">
-        <div class="grid-y">
+        <div class="grid-y posts">
             $body$
         </div>
     </div>
