--- a/Foundation/scss/_settings.scss
+++ b/Foundation/scss/_settings.scss
@@ -70,11 +70,11 @@ $global-font-size: 100%;
 $global-width: rem-calc(1200);
 $global-lineheight: 1.5;
 $foundation-palette: (
-  primary: #1779ba,
-  secondary: #767676,
-  success: #3adb76,
-  warning: #ffae00,
-  alert: #cc4b37,
+  primary: $solarized-blue, //#1779ba,
+  secondary: $solarized-base0, // #767676,
+  success: $solarized-cyan, //#3adb76,
+  warning: $solarized-yellow, //#ffae00,
+  alert: $solarized-red, //#cc4b37,
 );
 $light-gray: #e6e6e6;
 $medium-gray: #cacaca;
@@ -82,7 +82,7 @@ $dark-gray: #8a8a8a;
 $black: #0a0a0a;
 $white: #fefefe;
 $body-background: $solarized-base3; //$white;
-$body-font-color: $solarized-base02; //$black;
+$body-font-color: $solarized-base01; //$black;
 $body-font-family: 'Helvetica Neue', Helvetica, Roboto, Arial, 'Noto Sans SC', sans-serif;//'Helvetica Neue', Helvetica, Roboto, Arial, sans-serif;
 $body-antialiased: true;
 $global-margin: 1rem;
