--- a/src_site/templates/post-title_info-body-teaser.html
+++ b/src_site/templates/post-title_info-body-teaser.html
@@ -1,8 +1,12 @@
 <section class="cell">
     <div class="header">
-        <h4><a href="$url$">$title$</a></h4>
-        <p><i class="far fa-calendar-alt"></i>&nbsp;$date$&nbsp;
-        $if(author)$ <i class="far fa-edit"></i>&nbsp;$author$ $endif$</p>
+        <h2><a href="$url$">$title$</a></h2>
+        <p>
+            <i class="far fa-calendar"></i>&nbsp;$date$&nbsp;
+            $if(author)$
+            <i class="far fa-user"></i>&nbsp;$author$
+            $endif$
+        </p>
     </div>
     <div>
         $if(teaser)$ $teaser$ <a href="$url$">Read more &hellip;</a> $else$ $body$ $endif$
