--- a/src_site/templates/post-with-hero.html
+++ b/src_site/templates/post-with-hero.html
@@ -1,13 +1,13 @@
-<div class="hero-section">
+<!--<div class="hero-section">
   <div class="hero-section-text">
     <h1>Welcome</h1>  
-    <h5></h5>
+    <h2>This is a Blog. I do not want to make it a </h2>
   </div>
-</div>
+</div>-->
 
 <article>
     <div class="grid-container" style="min-height:100vh" id="main">
-        <div class="grid-y grid-padding-y">
+        <div class="grid-y grid-padding-y posts">
             $body$
         </div>
     </div>
