--- a/src_site/templates/post-title_info-body.html
+++ b/src_site/templates/post-title_info-body.html
@@ -4,12 +4,13 @@
         <p>
             <i class="far fa-calendar"></i>&nbsp;$date$&nbsp;
             $if(author)$
-            <i class="far fa-user"></i>&nbsp;$endif$
+            <i class="far fa-user"></i>&nbsp;$author$&nbsp;
+            $endif$
             $if(git-commits)$
             <i class="fas fa-history"></i>&nbsp;<a href="$git-commits$">History</a>&nbsp;
             $endif$
             $if(git-src)$
-            <i class="fas fa-code"></i>&nbsp;<a href="$git-src$">$git-SHA$</a>&nbsp;
+            <i class="fas fa-code"></i>&nbsp;<a href="$git-src$">$git-SHA$</a>
             $endif$
         </p>
     </div>
