--- a/src_site/templates/footer.html
+++ b/src_site/templates/footer.html
@@ -13,9 +13,9 @@
                 <a href="//pandoc.org/">Pandoc</a>'s extended
                 <a href="//daringfireball.net/projects/markdown/">Markdown</a>.
                 Stylesheets are built with
-                <a href="//foundation.zurb.com/">Zurb Foundation</a>
+                <a href="//foundation.zurb.com/">Zurb Foundation</a><!--
                 with <a href="http://ethanschoonover.com/solarized">Solarized</a>
-                color-scheme. The site, including source codes, is hosted on
+                color-scheme-->. The site, including source codes, is hosted on
                 <a href="//pages.github.com">Github Pages</a>.</p>
             </div>
             <div class="cell medium-4">
