--- a/src_site/templates/footer.html
+++ b/src_site/templates/footer.html
@@ -17,6 +17,10 @@
                 with <a href="http://ethanschoonover.com/solarized">Solarized</a>
                 color-scheme-->. The site, including source codes, is hosted on
                 <a href="//pages.github.com">Github Pages</a>.</p>
+                
+                <p>
+                    $if(git-src)$Compiled from commit <a href="$git-src$">$git-SHA$</a>.$endif$
+                </p>
             </div>
             <div class="cell medium-4">
                 <h5>Links</h5>
