--- a/Foundation/scss/_settings_override.scss
+++ b/Foundation/scss/_settings_override.scss
@@ -60,9 +60,21 @@
 //  55. Top Bar
 //  56. Xy Grid
 
+@import 'solarized';  // import solarized colors
+
 // 1. Global
 // ---------
 
+$foundation-palette: (
+  primary: $solarized-blue, //#1779ba,
+  secondary: $solarized-base0, // #767676,
+  success: $solarized-cyan, //#3adb76,
+  warning: $solarized-yellow, //#ffae00,
+  alert: $solarized-red, //#cc4b37,
+);
+$body-background: $solarized-base3; //$white;
+$body-font-color: $solarized-base01; //$black;
+$body-font-family: 'Helvetica Neue', Helvetica, Roboto, Arial, 'Noto Sans SC', sans-serif;//'Helvetica Neue', Helvetica, Roboto, Arial, sans-serif;
 
 // 2. Breakpoints
 // --------------
@@ -75,24 +87,9 @@
 // 4. Base Typography
 // ------------------
 
-$header-styles: (
-  small: (
-    'h1': ('font-size': 24),
-    'h2': ('font-size': 20),
-    'h3': ('font-size': 19),
-    'h4': ('font-size': 18),
-    'h5': ('font-size': 17),
-    'h6': ('font-size': 16),
-  ),
-  medium: (
-    'h1': ('font-size': 30),
-    'h2': ('font-size': 24),
-    'h3': ('font-size': 21),
-    'h4': ('font-size': 18),
-    'h5': ('font-size': 17),
-    'h6': ('font-size': 16),
-  ),
-);
+$code-color: $body-font-color; //$black;
+$code-background: $solarized-base2; //$light-gray;
+$code-border: none; //1px solid $medium-gray;
 
 // 5. Typography Helpers
 // ---------------------
@@ -100,7 +97,6 @@ $header-styles: (
 
 // 6. Abide
 // --------
-
 
 // 7. Accordion
 // ------------
@@ -121,7 +117,6 @@ $header-styles: (
 // 11. Button
 // ----------
 
-$button-margin: 0; //0 0 $global-margin 0;
 
 // 12. Button Group
 // ----------------
@@ -134,14 +129,6 @@ $button-margin: 0; //0 0 $global-margin 0;
 // 14. Card
 // --------
 
-$card-background: rgba($solarized-base2,.7); //$white;
-$card-font-color: $body-font-color;
-$card-divider-background: rgba($solarized-base2,.9) ;
-$card-border: 1px solid $light-gray;
-$card-shadow: none;
-$card-border-radius: 2ex; //$global-radius
-$card-padding: $global-padding;
-$card-margin-bottom: $global-margin;
 
 // 15. Close Button
 // ----------------
@@ -210,6 +197,7 @@ $card-margin-bottom: $global-margin;
 // 31. Prototype Border-None
 // -------------------------
 
+
 // 32. Prototype Bordered
 // ----------------------
 
@@ -240,6 +228,7 @@ $card-margin-bottom: $global-margin;
 
 // 39. Prototype Separator
 // -----------------------
+
 
 // 40. Prototype Shadow
 // --------------------
@@ -304,10 +293,9 @@ $card-margin-bottom: $global-margin;
 // 55. Top Bar
 // -----------
 
-$topbar-background: transparent;
-$topbar-submenu-background: transparent;
+$topbar-background: $solarized-base02; //$light-gray;
 
 // 56. Xy Grid
 // -----------
 
-
+$grid-container: $global-width * .6;
