--- a/Foundation/scss/blog_main.scss
+++ b/Foundation/scss/blog_main.scss
@@ -1,6 +1,7 @@
 @charset 'utf-8';
 
 @import 'settings';
+@import 'settings_override';
 @import 'blog_settings';
 @import 'foundation';
 @import 'motion-ui';
@@ -18,8 +19,8 @@
 //@include foundation-badge;
 //@include foundation-breadcrumbs;
 //@include foundation-button-group;
-@include foundation-callout;
-//@include foundation-card;
+//@include foundation-callout;
+@include foundation-card;
 @include foundation-close-button;
 @include foundation-menu;
 @include foundation-menu-icon;
