--- a/src_site/templates/textfile.html
+++ b/src_site/templates/textfile.html
@@ -15,7 +15,7 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Yun Hao</title>
-        <link rel="stylesheet" href="/css/app.css" />
+        <link rel="stylesheet" href="/css/main.css" />
         <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css">
         <style>
         body {
