--- a/src_site/templates/post-title_info-body-teaser.html
+++ b/src_site/templates/post-title_info-body-teaser.html
@@ -1,26 +1,27 @@
 <section class="cell">
-<div class="card">
-<div class="card-divider">
-    <div class="header">
-        <h2><a href="$url$">$title$</a></h2>
-        <span>
-            <i class="far fa-calendar"></i>&nbsp;$date$&nbsp;
-            $if(author)$
-            <i class="far fa-user"></i>&nbsp;$author$
-            $endif$
-        </span>
+    <div class="card">
+        <div class="card-divider">
+            <div class="header">
+                <h2><a href="$url$">$title$</a></h2>
+                <span>
+                    <i class="far fa-calendar"></i>&nbsp;$date$&nbsp;
+                    $if(author)$
+                    <i class="far fa-user"></i>&nbsp;$author$
+                    $endif$
+                </span>
+            </div>
+        </div>
+        <div class="card-section">
+            <div>$if(teaser)$
+                $teaser$
+                <div class="grid-x align-right">
+                    <div class="cell shrink">
+                    <a href="$url$"  class="button">Read more &hellip;</a>
+                    </div>
+                </div>$else$
+                $body$$endif$
+            </div>
+        </div>
     </div>
-</div>
-<div class="card-section">
-    <div>$if(teaser)$
-        $teaser$
-        <div class="grid-x align-right">
-        <div class="cell shrink">
-        <a href="$url$"  class="button">Read more &hellip;</a>
-        <div></div>$else$
-        $body$$endif$
-    </div>
-</div>
-</div>
 </section>
 
