--- a/src_site/templates/post-title-body.html
+++ b/src_site/templates/post-title-body.html
@@ -1,8 +1,10 @@
-<section class="cell">
-    <div class="header">
-        <h1>$title$</h1>
-    </div>
-    <div>
-        $body$
-    </div>
-</section>
+<div class="grid-container" style="min-height:100vh" id="main">
+    <article class="grid-y post">
+        <header class="cell">
+            <h1>$title$</h1>
+        </header>
+        <div class="cell">
+            $body$
+        </div>
+    </article>
+</div>
