--- a/src_site/templates/comment.html
+++ b/src_site/templates/comment.html
@@ -4,4 +4,4 @@ var idcomments_post_id;
 var idcomments_post_url = '$url$';
 </script>
 <span id="IDCommentsPostTitle" style="display:none"></span>
-<script type='text/javascript' src='https://www.intensedebate.com/js/genericCommentWrapperV2.js'></script>
+<script src='https://www.intensedebate.com/js/genericCommentWrapperV2.js'></script>
