--- a/src_site/templates/default.html
+++ b/src_site/templates/default.html
@@ -13,7 +13,8 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>$title$ - Natural Stupidity</title>
+        <title>$title$</title>
+        <meta name="title" content="$title$">
         <link rel="stylesheet" href="/css/blog_main.css" />
         <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/solarized-dark.min.css">
         <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js" integrity="sha384-SlE991lGASHoBfWbelyBPLsUlwY1GwNDJo3jSJO04KZ33K2bwfV9YBauFfnzvynJ" crossorigin="anonymous"></script>
@@ -34,7 +35,7 @@
                                 <a href="/" style="padding:0;"><img alt="facepalm" width="36" height="36" src="/images/facepalm.png"/></a></li>
                                 -->
                                 <ul class="menu">
-                            <li class=>
+                            <li>
                                 <a href="/">Natural Stupidity</a>
                             </li></ul>
 		            </div>
@@ -51,11 +52,7 @@
         </div>
 
 		<!-- main section -->
-
-
-        $body$
-
-
+$body$
 
 		<!-- Footer -->
 $partial("templates/footer.html")$
