--- a/src_site/templates/post-title_info-body.html
+++ b/src_site/templates/post-title_info-body.html
@@ -1,24 +1,19 @@
-<section class="cell">
-    <div class="header">
-        <h1>$title$</h1>
-        <p>
-            <i class="far fa-calendar"></i>&nbsp;$date$&nbsp;
-            $if(author)$
-            <i class="far fa-user"></i>&nbsp;$author$&nbsp;
-            $endif$
-            $if(git-commits)$
-            <i class="fas fa-history"></i>&nbsp;<a href="$git-commits$">History</a>&nbsp;
-            $endif$
-            $if(git-src)$
-            <i class="fas fa-code"></i>&nbsp;<a href="$git-src$">$git-SHA$</a>
-            $endif$
-        </p>
-    </div>
-    <div>
-        $body$
-    </div>
-</section>
-
-<section>
-    $partial("templates/comment.html")$
-</section>
+<div class="grid-container" style="min-height:100vh" id="main">
+    <article class="grid-y post">
+        <header class="cell">
+            <h1>$title$</h1>
+            <p>
+                <i class="far fa-calendar"></i>&nbsp;<span class="dateline">$date$</span>&nbsp;$if(author)$
+                <i class="far fa-user"></i>&nbsp;<span class="byline-name">$author$</span>&nbsp;$endif$$if(git-commits)$
+                <i class="fas fa-history"></i>&nbsp;<a href="$git-commits$">History</a>&nbsp;$endif$$if(git-src)$
+                <i class="fas fa-code"></i>&nbsp;<a href="$git-src$">$git-SHA$</a>$endif$
+            </p>
+        </header>
+        <div class="cell">
+            $body$
+        </div>
+        <div class="cell">
+            $partial("templates/comment.html")$
+        </div>
+    </article>
+</div>
