--- a/src_site/templates/post-with-hero.html
+++ b/src_site/templates/post-with-hero.html
@@ -5,10 +5,37 @@
   </div>
 </div>-->
 
-<article>
-    <div class="grid-container" style="min-height:100vh" id="main">
-        <div class="grid-y grid-padding-y posts">
+<!--<div class="grid-container" style="min-height:100vh" id="main">
+</div>
+-->
+
+<div class="grid-x grid-margin-x grid-padding-x align-center">
+    <div class="cell medium-7 main-part medium-order-1 small-order-2">
+        <article class="grid-y grid-padding-y posts">
+            <header class="cell">
+                <h1>Posts</h1>
+            </header>
             $body$
-        </div>
+        </article>    
     </div>
-</article>
+    <div class="cell medium-3 side-part medium-order-2">
+        <div class="grid-y grid-padding-y posts">
+            <header class="cell">
+                <h1>Blog</h1>
+            </header>
+            <p>
+                Just Another Hakyll Site.
+                I am sorry that, unlike other blogs,
+                this one is not written for the readers but for myself.
+                My life is usually boring and I am always bored. However,
+                I hope I could keep some memories and ideas by keeping this blog.
+                Another aim of building this site is to let me waste some time
+                on programming, especially when I do not want to or cannot do mathematics.
+                Topics vary from daily life, mathematics, programming, etc.                
+            </p>
+        </div>    
+    </div>
+</div>
+
+
+
