--- a/src_site/templates/post-with-hero.html
+++ b/src_site/templates/post-with-hero.html
@@ -10,7 +10,7 @@
 -->
 
 <div class="grid-x grid-margin-x grid-padding-x align-center">
-    <div class="cell medium-6 main-part medium-order-1 small-order-2">
+    <div class="cell large-6 medium-8 main-part medium-order-1 small-order-2">
         <article class="grid-y grid-padding-y posts">
             <header class="cell">
                 <h1>Posts</h1>
@@ -18,7 +18,7 @@
             $body$
         </article>    
     </div>
-    <div class="cell medium-3 side-part medium-order-2">
+    <div class="cell large-3 medium-4 side-part medium-order-2">
         <div class="grid-y grid-padding-y posts">
             <header class="cell">
                 <h1>Blog</h1>
@@ -27,11 +27,12 @@
                 Just Another Hakyll Site.
                 I am sorry that, unlike other blogs,
                 this one is not written for the readers but for myself.
+                So perhaps you are not suppose to be here.
                 My life is usually boring and I am always bored. However,
                 I hope I could keep some memories and ideas by keeping this blog.
                 Another aim of building this site is to let me waste some time
                 on programming, especially when I do not want to or cannot do mathematics.
-                Topics vary from daily life, mathematics, programming, etc.                
+                Topics vary from daily life, <del>mathematics</del>, programming, etc.                
             </p>
         </div>    
     </div>
