--- a/src_site/templates/default.html
+++ b/src_site/templates/default.html
@@ -27,8 +27,8 @@
 
 	    <!-- nav section -->
         <div class="top-bar" id="responsive-menu">
-		    <div class="grid-container" style="flex-grow:1;">
-		        <div class="grid-x">
+		    <!--<div class="grid-container" style="flex-grow:1;">
+		        <div class="grid-x">-->
 		            <div class="top-bar-left">
 						    <!--<div class="menu-text">Natural Stupidity</div>
 							<li class="menu-text" style="padding-top:0px;padding-bottom:0px;">
@@ -47,8 +47,8 @@
                             <li><a href="/n/archive/">Archive</a></li>
                         </ul>
 		            </div>
-	            </div>
-		    </div>
+	            <!--</div>
+		    </div>-->
         </div>
 
 		<!-- main section -->
