--- a/src_site/templates/post-with-hero.html
+++ b/src_site/templates/post-with-hero.html
@@ -27,7 +27,7 @@
                 Just Another Hakyll Site.
                 I am sorry that, unlike other blogs,
                 this one is not written for the readers but for myself.
-                So perhaps you are not suppose to be here.
+                So perhaps you are not supposed to be here.
                 My life is usually boring and I am always bored. However,
                 I hope I could keep some memories and ideas by keeping this blog.
                 Another aim of building this site is to let me waste some time
