--- a/src_site/templates/footer.html
+++ b/src_site/templates/footer.html
@@ -34,13 +34,13 @@
                 </ul>
             </div>
         </div>
-        
     </div>
     <div class="footer-copyright">
         <div class="grid-container">
             <div class="grid-x grid-padding-x grid-margin-y">
                 <div class="cell">
                     © 2017 Yun Hao &lt;<a href="mailto:haoyun_public@163.com">haoyun_public@163.com</a>&gt;
+                    (<a href="/files/Yun_Hao.asc">PGP public key</a>)
                 </div>
             </div>
         </div>
