--- a/src_site/templates/post-title_info-body.html
+++ b/src_site/templates/post-title_info-body.html
@@ -1,16 +1,22 @@
 <div class="grid-container" style="min-height:100vh" id="main">
     <article class="grid-y post">
-        <header class="cell">
-            <h1>$title$</h1>
-            <p>
-                <i class="far fa-calendar"></i>&nbsp;<span class="dateline">$date$</span>&nbsp;$if(author)$
-                <i class="far fa-user"></i>&nbsp;<span class="byline-name">$author$</span>&nbsp;$endif$$if(git-commits)$
-                <i class="fas fa-history"></i>&nbsp;<a href="$git-commits$">History</a>&nbsp;$endif$$if(git-src)$
-                <i class="fas fa-code"></i>&nbsp;<a href="$git-src$">$git-SHA$</a>$endif$
-            </p>
-        </header>
-        <div class="cell">
-            $body$
+        <div class="card">
+            <div class="card-divider">
+                <header class="cell">
+                    <h1>$title$</h1>
+                    <p>
+                        <i class="far fa-calendar"></i>&nbsp;<span class="dateline">$date$</span>&nbsp;$if(author)$
+                        <i class="far fa-user"></i>&nbsp;<span class="byline-name">$author$</span>&nbsp;$endif$$if(git-commits)$
+                        <i class="fas fa-history"></i>&nbsp;<a href="$git-commits$">History</a>&nbsp;$endif$$if(git-src)$
+                        <i class="fas fa-code"></i>&nbsp;<a href="$git-src$">$git-SHA$</a>$endif$
+                    </p>
+                </header>
+            </div>
+            <div class="card-section">
+                <div class="cell">
+                    $body$
+                </div>
+            </div>
         </div>
         <div class="cell">
             $partial("templates/comment.html")$
