--- a/src_site/templates/textfile.html
+++ b/src_site/templates/textfile.html
@@ -35,8 +35,12 @@
     <div class="grid-container" style="min-height:100vh">
         <div class="grid-y grid-padding-y">
 		    <div class="cell">
-		        <a href="/">[Back to Stupidity] ↵</a>
-			</div>
+            <div class="grid-x align-justify"> <!-- Aligned to the edges -->
+                <div class="cell small-6"><a href="/">[Back to Stupidity] ↵</a></div>
+                <div class="cell shrink"><a href="/s/">↑ [Home] </a></div>
+            </div>		                
+            </div>
+
             <div class="cell">
                 $body$
             </div>
